--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,4 +2,30 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Prompt', sans-serif;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
+/*HEADER*/
+header{
+    position: fixed;
+    width: 100%;
+    text-align: right;
+    margin: 1rem 0rem;
+    z-index: 1;
+}
+
+header a{
+    color: white;
+    margin: 10px 20px;
+    background-color: grey;
+    padding: 0.5rem;
+}
+
+.container{
+    height: 100vh;
+    background-color: black;
+    color: white;
+    display: flex;
+    flex-direction: column;
 }
