--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,17 +36,18 @@ main{
     flex-wrap: wrap;
     display: flex;
     justify-content: center;
-    margin: 3rem;
-    padding: 1.2rem;
+    align-items: center;
 }
 
 .photo{
     width: calc(100%/7);
+    padding: 5px;
 }
 
 .photo img{
     width: 100%;
     padding: 1px 5px;
+    position: relative;
 }
 
 .photo .label{
@@ -56,7 +57,7 @@ main{
     background-color: black;
 }
 
-.fa-microphone-slash {
+.fa-microphone-slash{
 }
 
 /*FOOTER*/
